--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
           R$54,90 <small>/mês</small>
           <div style="font-size: 18px; margin-top: 5px;">ou R$49,90 até o vencimento</div>
         </div>
-        <p class="plano-descricao">Proteção completa com bloqueio remoto do motor</p>
+        <p class="plano-descricao">Segurança completa com bloqueio remoto do motor</p>
         <ul class="plano-beneficios">
           <li>Bloqueio remoto via aplicativo</li>
           <li>Localização em tempo real</li>
