--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
       <div class="neon-corner bottom-right"></div>
       <div class="welcome-popup-content">
         <h3>SEJA BEM-VINDO(A) À RASTREANDO GPS!</h3>
-        <p>Temos ofertas especiais agendando até o dia 31 de julho!</p>
+        <p>Proteja o que é seu com tecnologia de ponta!</p>
         <p>Aproveite nossos pacotes exclusivos com instalação profissional em todo o RJ.</p>
         <button class="welcome-popup-btn" onclick="closeWelcomePopup()">ENTENDI, VAMOS LÁ!</button>
       </div>
@@ -1164,7 +1164,7 @@
   <!-- Formulário Atualizado -->
   <div class="form-container">
     <div class="form-box">
-      <h2>📍 Consulte o valor da instalação</h2>
+      <h2>📍 Consulte o valor da instalação aqui!</h2>
       <input type="text" id="bairroInput" placeholder="Digite apenas a cidade do RJ" />
       <input type="number" id="quantidadeInput" placeholder="Quantidade de veículos" min="1" />
       <select id="tipoRastreador">
