--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
       <div class="welcome-popup-content">
         <h3>SEJA BEM-VINDO(A) À RASTREANDO GPS!</h3>
         <p>Proteja o que é seu com tecnologia de ponta!</p>
-        <p>Aproveite nossos pacotes exclusivos com instalação profissional em todo o RJ.</p>
+        <p>Consulte o valor da instalação, ela pode ser feita na sua residência!</p>
         <button class="welcome-popup-btn" onclick="closeWelcomePopup()">ENTENDI, VAMOS LÁ!</button>
       </div>
     </div>
