--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
 
         <!-- NOVO CARROSSEL DE INSTALAÇÕES ADICIONADO AQUI -->
     <div class="instalacoes-carrossel">
-      <h2 class="section-title">🔧 Nossas Instalações</h2>
+      <h2 class="section-title">🔧 Algumas Instalações</h2>
       <p class="section-subtitle">
         Confira nosso trabalho profissional de instalação em veículos de todo o Rio de Janeiro.
       </p>
