--- a/index.html
+++ b/index.html
@@ -2365,6 +2365,52 @@
   });
 </script>
 
+<!-- Botões de Download de Apps -->
+<div class="app-download-section" style="margin: 40px auto; text-align: center;">
+  <h3 style="color: #0d3c61; font-size: 22px; margin-bottom: 20px;">📲 Baixe nosso app e monitore seu veículo de qualquer lugar!</h3>
+  
+  <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+    <!-- Botão Android -->
+    <a href="https://play.google.com/store/apps/details?id=com.rastreandogpsrastreamento.br" 
+       target="_blank" 
+       class="app-button" 
+       style="background: linear-gradient(135deg, #3ddc84, #2bb673);">
+      <div style="display: flex; align-items: center; padding: 12px 25px; border-radius: 50px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/226/226770.png" 
+             alt="Android" 
+             style="width: 30px; height: 30px; margin-right: 10px; filter: drop-shadow(0 2px 3px rgba(0,0,0,0.2))">
+        <span style="color: white; font-weight: 600;">Disponível no<br><span style="font-size: 18px;">Google Play</span></span>
+      </div>
+    </a>
+    
+    <!-- Botão iPhone -->
+    <a href="https://apps.apple.com/br/app/rastreando-gps/id1642112039" 
+       target="_blank" 
+       class="app-button" 
+       style="background: linear-gradient(135deg, #0071e3, #00498e);">
+      <div style="display: flex; align-items: center; padding: 12px 25px; border-radius: 50px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/179/179309.png" 
+             alt="iPhone" 
+             style="width: 30px; height: 30px; margin-right: 10px; filter: drop-shadow(0 2px 3px rgba(0,0,0,0.2))">
+        <span style="color: white; font-weight: 600;">Disponível na<br><span style="font-size: 18px;">App Store</span></span>
+      </div>
+    </a>
+    
+    <!-- Botão Versão Web -->
+    <a href="https://rastreamento.ong.br/index.php" 
+       target="_blank" 
+       class="app-button" 
+       style="background: linear-gradient(135deg, #0d3c61, #082a44);">
+      <div style="display: flex; align-items: center; padding: 12px 25px; border-radius: 50px;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2933/2933245.png" 
+             alt="Web" 
+             style="width: 30px; height: 30px; margin-right: 10px; filter: drop-shadow(0 2px 3px rgba(0,0,0,0.2))">
+        <span style="color: white; font-weight: 600;">Acesse também<br><span style="font-size: 18px;">Versão Web</span></span>
+      </div>
+    </a>
+  </div>
+</div>
+
 <!-- Rodapé Atualizado -->
 <footer>
   <strong>Rastreando GPS | Soluções em Rastreamento Veicular</strong>
