--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
 
   <!-- Headline com banner -->
   <div class="headline-video-container">
-    <img src="HEADLINE/banner.gif" alt="Headline Animada" class="headline-video" />
+    <img src="HEADLINE/banner.png" alt="Headline Animada" class="headline-video" />
   </div>
 
   <!-- Formulário Atualizado -->
