--- a/index.html
+++ b/index.html
@@ -1987,7 +1987,7 @@
     </script>
 <!-- Seção de Perguntas Frequentes -->
 <div class="faq-container">
-  <h2 class="section-title">❓ Perguntas Frequentes</h2>
+  <h2 class="section-title">💭 Perguntas Frequentes</h2>
   <p class="section-subtitle">
     Tire suas dúvidas sobre nossos rastreadores e serviços.
   </p>
