--- a/index.html
+++ b/index.html
@@ -1986,7 +1986,7 @@
       });
     </script>
 
-<!-- Botões de Download - Versão Premium -->
+<!-- Botões de Download - Versão Ajustada -->
 <div class="app-download-section" style="margin: 50px auto 30px; text-align: center;">
   <h3 class="section-title" style="margin-bottom: 30px;">📲 Baixe nosso app agora mesmo</h3>
   
@@ -1994,15 +1994,15 @@
     <!-- Botão Android -->
     <a href="https://play.google.com/store/apps/details?id=com.rastreandogpsrastreamento.br" 
        target="_blank" 
-       class="app-button-android" 
-       style="text-decoration: none;">
-      <div style="background: #3DDC84; border-radius: 16px; padding: 15px 25px; box-shadow: 0 4px 15px rgba(61, 220, 132, 0.3); transition: all 0.3s; display: flex; align-items: center; height: 60px;">
-        <div style="background: white; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+       class="app-button" 
+       style="text-decoration: none; min-width: 220px;">
+      <div style="background: #3DDC84; border-radius: 16px; padding: 15px 20px; box-shadow: 0 4px 15px rgba(61, 220, 132, 0.3); transition: all 0.3s; display: flex; align-items: center; height: 60px; width: 100%; box-sizing: border-box;">
+        <div style="background: white; min-width: 50px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); flex-shrink: 0;">
           <img src="https://cdn-icons-png.flaticon.com/512/226/226770.png" 
                alt="Android" 
                style="width: 30px; height: 30px;">
         </div>
-        <div style="text-align: left; color: white;">
+        <div style="text-align: left; color: white; white-space: nowrap;">
           <div style="font-size: 12px; opacity: 0.9;">Disponível no</div>
           <div style="font-size: 18px; font-weight: 600; margin-top: -3px;">Google Play</div>
         </div>
@@ -2012,15 +2012,15 @@
     <!-- Botão iPhone -->
     <a href="https://apps.apple.com/br/app/rastreando-gps/id1642112039" 
        target="_blank" 
-       class="app-button-ios" 
-       style="text-decoration: none;">
-      <div style="background: #000000; border-radius: 16px; padding: 15px 25px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); transition: all 0.3s; display: flex; align-items: center; height: 60px;">
-        <div style="background: white; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+       class="app-button" 
+       style="text-decoration: none; min-width: 220px;">
+      <div style="background: #000000; border-radius: 16px; padding: 15px 20px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); transition: all 0.3s; display: flex; align-items: center; height: 60px; width: 100%; box-sizing: border-box;">
+        <div style="background: white; min-width: 50px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); flex-shrink: 0;">
           <img src="https://cdn-icons-png.flaticon.com/512/179/179309.png" 
                alt="iPhone" 
-               style="width: 30px; height: 30px;">
+               style="width: 24px; height: 24px;">
         </div>
-        <div style="text-align: left; color: white;">
+        <div style="text-align: left; color: white; white-space: nowrap;">
           <div style="font-size: 12px; opacity: 0.9;">Baixe na</div>
           <div style="font-size: 18px; font-weight: 600; margin-top: -3px;">App Store</div>
         </div>
@@ -2030,15 +2030,15 @@
     <!-- Botão Versão Web -->
     <a href="https://rastreamento.ong.br/index.php" 
        target="_blank" 
-       class="app-button-web" 
-       style="text-decoration: none;">
-      <div style="background: linear-gradient(135deg, #0d3c61, #1a5a8d); border-radius: 16px; padding: 15px 25px; box-shadow: 0 4px 15px rgba(13, 60, 97, 0.3); transition: all 0.3s; display: flex; align-items: center; height: 60px;">
-        <div style="background: white; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+       class="app-button" 
+       style="text-decoration: none; min-width: 220px;">
+      <div style="background: linear-gradient(135deg, #0d3c61, #1a5a8d); border-radius: 16px; padding: 15px 20px; box-shadow: 0 4px 15px rgba(13, 60, 97, 0.3); transition: all 0.3s; display: flex; align-items: center; height: 60px; width: 100%; box-sizing: border-box;">
+        <div style="background: white; min-width: 50px; width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); flex-shrink: 0;">
           <img src="https://cdn-icons-png.flaticon.com/512/2933/2933245.png" 
                alt="Web" 
                style="width: 26px; height: 26px;">
         </div>
-        <div style="text-align: left; color: white;">
+        <div style="text-align: left; color: white; white-space: nowrap;">
           <div style="font-size: 12px; opacity: 0.9;">Acesse pelo</div>
           <div style="font-size: 18px; font-weight: 600; margin-top: -3px;">Computador</div>
         </div>
@@ -2048,22 +2048,19 @@
 </div>
 
 <style>
-  /* Efeitos de hover */
-  .app-button-android div:hover {
+  /* Efeitos de hover unificados */
+  .app-button div:hover {
     transform: translateY(-3px);
+  }
+  .app-button-android div:hover {
     box-shadow: 0 6px 20px rgba(61, 220, 132, 0.4);
   }
-  
   .app-button-ios div:hover {
-    transform: translateY(-3px);
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
   }
-  
   .app-button-web div:hover {
-    transform: translateY(-3px);
     box-shadow: 0 6px 20px rgba(13, 60, 97, 0.4);
   }
-
 </style>
 
 <!-- Seção de Perguntas Frequentes -->
@@ -2095,6 +2092,7 @@
         <p>📱 Sim!<br>👉 Android<br>👉 iPhone</p>
       </div>
     </div>
+    
     
     <!-- Pergunta 3 -->
     <div class="faq-item">
