--- a/index.html
+++ b/index.html
@@ -1274,6 +1274,21 @@
   </style>
 </head>
 <body>
+  <header>
+  <div class="wrap">
+    <div class="brand">
+      <a href="#">Rastreando GPS<span class="dot">.</span></a>
+    </div>
+    <nav class="nav">
+      <a href="#home">Início</a>
+      <a href="#sobre">Sobre</a>
+      <a href="#servicos">Serviços</a>
+      <a href="#contato">Contato</a>
+    </nav>
+    <a href="#orcamento" class="cta">Solicitar Orçamento</a>
+  </div>
+</header>
+
   <div id="particles-js"></div>
 
   <!-- Overlay escurecido e desfocado -->
