--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:linear-gradient(180deg,#070c16,#0a1424 50%,#0b1628);} 
-    body{color:#0b2239}
+    /* TEXTO PADRÃO CLARO PARA FUNDO ESCURO */
+    body{color:#eaf2ff}
     a{color:inherit;text-decoration:none}
     img{max-width:100%;display:block}
 
@@ -31,12 +32,12 @@
     .kicker{display:inline-flex;gap:8px;align-items:center;background:rgba(34,197,94,.12);border:1px solid rgba(34,197,94,.35);color:#d1fae5;padding:6px 10px;border-radius:999px;font-weight:800}
     .spark{width:8px;height:8px;border-radius:50%;background:var(--green);box-shadow:0 0 0 6px rgba(34,197,94,.18)}
     .title{font-size:clamp(26px,5vw,42px);line-height:1.06;color:#ebf7ff;margin:12px 0 8px;font-weight:900}
-    .lead{color:#cfe7ff;opacity:.95}
+    .lead{color:#d6ebff;opacity:1}
 
     /* Blocos brancos base */
     .shadow{box-shadow:0 10px 30px rgba(2,6,23,.16)}
 
-    /* Form consultor */
+    /* Form consultor (mantém textos escuros pois é cartão branco) */
     .form-container{display:flex;justify-content:center;margin:18px 0}
     .form-box{background:#fff;border-radius:18px;padding:28px 22px;box-shadow:0 10px 30px rgba(2,6,23,.25);width:100%;max-width:420px;border:1px solid #e6eef7}
     .form-box h2{color:var(--ink);font-size:22px;margin:0 0 16px}
@@ -45,12 +46,12 @@
     .form-box button{background:linear-gradient(90deg,var(--green),#39e08a);color:#062b1b;border:0;padding:14px;border-radius:12px;font-size:17px;font-weight:800;width:100%;cursor:pointer}
     .form-box button:hover{transform:translateY(-1px);box-shadow:0 10px 22px rgba(34,197,94,.35)}
 
-    /* Seções herdadas do seu layout */
-    .section-title{font-size:28px;font-weight:700;color:#0d3c61;margin:40px 0 15px;position:relative;display:inline-block;padding-bottom:10px}
-    .section-title:after{content:'';position:absolute;bottom:0;left:50%;transform:translateX(-50%);width:80px;height:4px;background:linear-gradient(90deg,#22c55e,#0d3c61);border-radius:2px}
-    .section-subtitle{font-size:16px;color:#555;margin-bottom:30px;max-width:600px;margin-left:auto;margin-right:auto;line-height:1.5}
+    /* Seções (títulos claros sobre o fundo escuro da página) */
+    .section-title{font-size:28px;font-weight:700;color:#ffffff;margin:40px 0 15px;position:relative;display:inline-block;padding-bottom:10px}
+    .section-title:after{content:'';position:absolute;bottom:0;left:50%;transform:translateX(-50%);width:80px;height:4px;background:linear-gradient(90deg,#22c55e,#8ad0ff);border-radius:2px}
+    .section-subtitle{font-size:16px;color:#d8e7ff;margin-bottom:30px;max-width:600px;margin-left:auto;margin-right:auto;line-height:1.5}
 
-    /* Planos (sua paleta) */
+    /* Planos (caixas escuras com textos claros) */
     .planos-container{display:flex;justify-content:center;flex-wrap:wrap;gap:25px;margin:40px auto;padding:0 20px;max-width:1000px}
     .plano-box{background:linear-gradient(135deg,#0d3c61,#082a44);color:#fff;border-radius:16px;padding:30px;width:100%;max-width:400px;position:relative;overflow:hidden;box-shadow:0 10px 30px rgba(13,60,97,.3);border:2px solid #22c55e}
     .plano-box.sem-bloqueio{border-color:#ca5964}
@@ -114,7 +115,7 @@
     .instalacoes-dot{width:12px;height:12px;border-radius:50%;background:#e0e0e0;cursor:pointer}
     .instalacoes-dot.active{background:linear-gradient(90deg,#22c55e,#0d3c61);transform:scale(1.2)}
 
-    /* FAQ */
+    /* FAQ (cartões claros, textos escuros mantidos) */
     .faq-container{max-width:800px;margin:50px auto;padding:0 20px}
     .faq-accordion{margin-top:30px;border-radius:12px;overflow:hidden;box-shadow:0 5px 15px rgba(0,0,0,.05)}
     .faq-item{border-bottom:1px solid #e0e0e0}
@@ -210,7 +211,7 @@
     <img src="instalacao/instalacao1.jpg" alt="Instalação" style="width: 100%; margin-top: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
   </div>
 
-  <!-- Carrossel de instalações (usa instalacoescarrossel/Instalacao1..15.jpg) -->
+  <!-- Carrossel de instalações -->
   <div class="instalacoes-carrossel">
     <h2 class="section-title">🔧 Algumas Instalações</h2>
     <p class="section-subtitle">Confira nosso trabalho profissional de instalação em veículos de todo o Rio de Janeiro.</p>
@@ -240,7 +241,7 @@
     </div>
   </div>
 
-  <!-- Carrossel de Recuperações (usa Recuperacao/Recuperacao1..6.jpg) -->
+  <!-- Carrossel de Recuperações -->
   <h2 class="section-title" style="text-align:center">🔐 Recuperações Eficientes</h2>
   <p class="section-subtitle">Casos reais de veículos recuperados com o sistema Rastreando GPS em todo o estado do Rio de Janeiro.</p>
   <div class="carousel" id="carousel">
@@ -252,7 +253,7 @@
     <img src="Recuperacao/Recuperacao6.jpg" alt="Veículo recuperado 6" />
   </div>
 
-  <!-- Planos (mantidos) -->
+  <!-- Planos -->
   <div class="planos-container">
     <div class="plano-box com-bloqueio">
       <div class="plano-destaque">MAIS VENDIDO</div>
@@ -285,7 +286,7 @@
     </div>
   </div>
 
-  <!-- Depoimentos (usa Depoimentos/depoimento1..4.png) -->
+  <!-- Depoimentos -->
   <div class="depoimentos-container">
     <h2 class="section-title">💬 Depoimentos Reais</h2>
     <p class="section-subtitle">Veja o que nossos clientes têm a dizer sobre a qualidade e eficiência do nosso serviço de rastreamento.</p>
@@ -306,7 +307,7 @@
     </div>
   </div>
 
-  <!-- Botões de apps (mantidos) -->
+  <!-- Botões de apps -->
   <div class="app-download-section" style="margin: 50px auto 30px; text-align: center;">
     <h3 class="section-title" style="margin-bottom: 30px;">📲 Baixe nosso app agora mesmo</h3>
     <div style="display: flex; justify-content: center; gap: 25px; flex-wrap: wrap;">
@@ -346,7 +347,7 @@
     </div>
   </div>
 
-  <!-- FAQ (mesmo conteúdo) -->
+  <!-- FAQ -->
   <div class="faq-container">
     <h2 class="section-title">💭 Perguntas Frequentes</h2>
     <p class="section-subtitle">Tire suas dúvidas sobre nossos rastreadores e serviços.</p>
@@ -363,7 +364,7 @@
     </div>
   </footer>
 
-  <!-- Scripts: consulta + carrosséis + contador + welcome + particles -->
+  <!-- Scripts -->
   <script>
     function fecharModal(){const p=document.getElementById('popup'),o=document.getElementById('modalOverlay');p.classList.remove('active');o.classList.remove('active');setTimeout(()=>{p.style.display='none';o.style.display='none';},300)}
     async function verValor(){
@@ -400,7 +401,6 @@
           document.getElementById('popup-header').style.background='linear-gradient(135deg,#0d3c61,#22c55e)';
           document.getElementById('popup-content').innerHTML=`<div class="popup-price" id="popup-price">R$ ${valorInstalacao.toFixed(2).replace('.',',')}</div><div class="popup-details" id="popup-details"><p>📍 Cidade: <span id="popup-address">${bairroInput}</span></p><p>🚗 Veículos: <span id="popup-vehicles">${quantidade}</span></p><p>🛰️ Tipo: <span id="popup-type">${tipo==='com'?'Com bloqueio':'Sem bloqueio'}</span></p><p id="popup-monthly" style="margin: 15px 0; font-size: 17px;">📅 <strong>Mensalidade:</strong> <span id="popup-monthly-value" style="font-size: 1.1em; font-weight: bold; color: #0d3c61;">${textoMensalidade}</span></p></div><div class="popup-features" id="popup-features"><ul><li>Instalação no seu endereço</li><li>Localização em tempo real</li><li>Históricos de rotas</li><li>Baixe em até 5 telefones</li></ul></div><a href="${linkWhats}" id="popup-whatsapp" class="botaoZap verdeZap pulsando" target="_blank">Quero instalar meu rastreador!</a>`;
 
-          // Resultado fora do popup + benefícios (sua imagem)
           document.getElementById('resultadoFixo').className='sucesso';
           document.getElementById('resultadoFixo').innerHTML=`<div class='resultado-header' style="background:linear-gradient(135deg,#0d3c61,#22c55e);color:#fff;padding:20px;text-align:center"><h3>✅ Valor da Instalação</h3></div><div class='resultado-container' style="padding:25px"><div class='resultado-price' style="font-size:36px;font-weight:800;color:#22c55e">R$ ${valorInstalacao.toFixed(2).replace('.',',')}</div><div class='resultado-details' style="text-align:left;margin:20px 0;line-height:1.6"><p>📍 <strong>Endereço:</strong> ${bairroInput}</p><p>🚗 <strong>Veículos:</strong> ${quantidade}</p><p>🛰️ <strong>Tipo:</strong> ${tipo==='com'?'Com bloqueio':'Sem bloqueio'}</p><div class='mensalidade-container'><span class='mensalidade-label'>📅 <strong>Mensalidade:</strong></span> <span class='mensalidade-valores'>${textoMensalidade}</span></div></div><div class='resultado-features' style="background:#f8f9fa;border-radius:10px;padding:15px"><ul><li>Instalação no seu endereço</li><li>Localização em tempo real</li><li>Históricos de rotas</li><li>Baixe em até 4 telefones</li></ul></div><div style="margin-top:20px"><a href='${linkWhats}' class='botaoZap verdeZap pulsando' target='_blank'>Quero instalar meu rastreador!</a></div></div>`;
           document.getElementById('resultadoFixo').style.display='block';
@@ -463,12 +463,24 @@
       track.addEventListener('touchend',e=>{endX=e.changedTouches[0].screenX;const d=startX-endX;if(d>50)nextFn();if(d<-50)prevFn()},{passive:true});
     });
 
-    // Contador regressivo (igual ao seu)
-    document.addEventListener('DOMContentLoaded',function(){const saved=localStorage.getItem('countdownData');const dur=60*60; if(saved){const data=JSON.parse(saved);const now=Math.floor(Date.now()/1000);const rem=dur-(now-data.startTime); if(rem>0){document.getElementById('countdownContainer').style.display='flex';startCountdown(rem)} else {localStorage.removeItem('countdownData');showCountdownExpired()} } else {const start=Math.floor(Date.now()/1000);localStorage.setItem('countdownData',JSON.stringify({startTime:start}));document.getElementById('countdownContainer').style.display='flex';startCountdown(dur)}});
+    // Contador regressivo
+    document.addEventListener('DOMContentLoaded',function(){
+      const saved=localStorage.getItem('countdownData');const dur=60*60;
+      if(saved){
+        const data=JSON.parse(saved);const now=Math.floor(Date.now()/1000);const rem=dur-(now-data.startTime);
+        if(rem>0){document.getElementById('countdownContainer').style.display='flex';startCountdown(rem)}
+        else {localStorage.removeItem('countdownData');showCountdownExpired()}
+      } else {
+        const start=Math.floor(Date.now()/1000);
+        localStorage.setItem('countdownData',JSON.stringify({startTime:start}));
+        document.getElementById('countdownContainer').style.display='flex';
+        startCountdown(dur)
+      }
+    });
     function startCountdown(t){let timeLeft=t;const el=document.getElementById('countdown');const timer=setInterval(()=>{const m=Math.floor(timeLeft/60);const s=Math.floor(timeLeft%60);el.textContent=`${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`;if(timeLeft<=0){clearInterval(timer);showCountdownExpired();localStorage.removeItem('countdownData')}else{timeLeft--}},1000)}
     function showCountdownExpired(){const el=document.getElementById('countdown');el.parentElement.innerHTML='<strong style="color:#e74c3c;">TEMPO ESGOTADO!</strong><br><small>Entre em contato para verificar novas promoções</small>'}
 
-    // FAQ (mesmo conteúdo, renderizado via JS para reduzir HTML aqui)
+    // FAQ
     document.addEventListener('DOMContentLoaded',function(){
       const faqs=[
         ['Tem fidelidade ou multa pra cancelar?','❌ Não temos fidelidade. Pode cancelar quando quiser, sem multa.'],
