--- a/index.html
+++ b/index.html
@@ -88,128 +88,8 @@
     #popup .popup-content{padding:25px;color:#333}
     .botao-fechar{position:absolute;top:15px;right:15px;width:32px;height:32px;background:rgba(255,255,255,.3);border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:20px;font-weight:700;color:#fff;cursor:pointer;border:2px solid #fff;transition:all 0.2s ease}
     .botao-fechar:hover{background:rgba(255,255,255,.5);transform:scale(1.1)}
-    
-    /* Melhorias no popup */
-    .popup-price {
-      font-size: 42px;
-      font-weight: 900;
-      color: #0d3c61;
-      margin: 15px 0;
-      background: #f8f9fa;
-      padding: 15px;
-      border-radius: 12px;
-      border: 2px dashed #22c55e;
-    }
-    .popup-price::before {
-      content: "POR APENAS";
-      display: block;
-      font-size: 18px;
-      font-weight: 600;
-      color: #22c55e;
-      margin-bottom: 5px;
-    }
 
-    /* Melhorias no resultado fixo */
-    .resultado-container {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    .resultado-features {
-      color: #333;
-      background: #f8f9fa !important;
-    }
-    .resultado-features li {
-      color: #333;
-    }
-
-    /* Melhorias no relógio */
-    #countdownContainer {
-      background: rgba(0,0,0,0.7) !important;
-      border-left: 5px solid #f1c40f !important;
-      color: #fff !important;
-    }
-    #countdown {
-      color: #fff !important;
-      text-shadow: 0 1px 3px rgba(0,0,0,0.3);
-    }
-
-    /* Melhorias na caixa de benefícios */
-    #beneficiosBox {
-      background: linear-gradient(135deg, #0d3c61, #082a44) !important;
-      padding: 30px !important;
-      border: 1px solid rgba(255,255,255,0.1) !important;
-      color: #fff !important;
-    }
-    #beneficiosBox h3 {
-      color: #fff !important;
-      font-size: 24px;
-      margin-bottom: 20px;
-      text-align: center;
-      position: relative;
-      padding-bottom: 10px;
-    }
-    #beneficiosBox h3::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 3px;
-      background: linear-gradient(90deg, #22c55e, #0ea5e9);
-      border-radius: 3px;
-    }
-    #beneficiosBox ul {
-      color: #e8f5ff !important;
-      padding-left: 25px !important;
-    }
-    #beneficiosBox li {
-      margin-bottom: 12px;
-      font-size: 16px;
-      position: relative;
-    }
-    #beneficiosBox li::before {
-      content: '✓';
-      color: #22c55e;
-      font-weight: bold;
-      position: absolute;
-      left: -20px;
-    }
-    #beneficiosBox strong {
-      color: #86efac !important;
-    }
-
-    /* Centralização das caixas de preço */
-    .plano-box {
-      text-align: center;
-    }
-    .plano-descricao, .plano-beneficios, .plano-observacao {
-      text-align: center;
-    }
-    .plano-beneficios {
-      padding-left: 0;
-      list-style-position: inside;
-    }
-
-    /* Melhorias no FAQ */
-    .faq-question {
-      position: relative;
-      padding-right: 40px !important;
-    }
-    .faq-icon {
-      position: absolute;
-      right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 20px;
-      font-weight: bold;
-      transition: transform 0.3s ease;
-    }
-    .faq-item.active .faq-icon {
-      transform: translateY(-50%) rotate(45deg);
-    }
-
+    /* Carrosséis e FAQ: mantém estilos do seu arquivo */
     .carousel{width:100%;max-width:600px;margin:20px auto;position:relative;border-radius:10px;overflow:hidden;box-shadow:0 2px 10px rgba(0,0,0,.1);padding:0 10px}
     .carousel img{width:100%;display:none}
     .carousel img.active{display:block}
@@ -246,6 +126,28 @@
     .faq-answer p{padding:0 20px 20px;margin:0;line-height:1.6;color:#333}
     .faq-item.active .faq-question{background:#0d3c61;color:#fff}
     .faq-item.active .faq-answer{max-height:300px}
+
+    /* Estilos melhorados para a caixa de benefícios */
+    #beneficiosBox {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      margin: 20px auto;
+      max-width: 1000px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+    #beneficiosBox ul {
+      color: #333;
+      line-height: 1.6;
+      padding-left: 20px;
+    }
+    #beneficiosBox li {
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+    #beneficiosBox strong {
+      color: #0d3c61;
+    }
 
     /* Estilos para os botões */
     .botaoZap {
