--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <!-- Formulário (mantém nomes/JS) -->
   <div class="form-container">
     <div class="form-box shadow">
-      <h2>📍 CONSULTE o valor da instalação aqui</h2>
+      <h2>📍 Consulte o valor da instalação aqui</h2>
       <input type="text" id="bairroInput" placeholder="Digite apenas a cidade do RJ" />
       <input type="number" id="quantidadeInput" placeholder="Quantidade de veículos" min="1" />
       <select id="tipoRastreador">
