--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
       text-align: left;
       padding-left: 20px;
     }
+  /* ... (todo o CSS anterior) ... */
+
+  /* Estilo para o popup features */
+  .popup-features ul {
+    color: #000;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  /* ==== NOVO CÓDIGO ==== */
+  .botao-fechar {
+    z-index: 10001;
+    pointer-events: auto;
+  }
+  
+</style> <!-- NÃO APAGUE ESSE </style>! -->
+
   </style>
 </head>
 <body>
