--- a/index.html
+++ b/index.html
@@ -226,13 +226,16 @@
     text-align: left;
     padding-left: 20px;
   }
+  .popup-content {
+  color: #333; /* Texto escuro (cinza quase preto) */
+}
 
   /* ==== NOVO CÓDIGO ==== */
   .botao-fechar {
     z-index: 10001;
     pointer-events: auto;
   }
-  
+
 </style> <!-- NÃO APAGUE ESSE </style>! -->
 
   </style>
