--- a/index.html
+++ b/index.html
@@ -237,6 +237,18 @@
     pointer-events: auto;
   }
 
+  /* DEIXA O TEXTO DA LISTA DE BENEFÍCIOS PRETO */
+ #resultadoFixo .resultado-features ul {
+  color: #000 !important; /* Preto puro */
+}
+
+/* Opcional: Aumenta o contraste do fundo se necessário */
+ #resultadoFixo .resultado-features {
+  background-color: #f8f9fa; /* Cinza bem clarinho (opcional) */
+  padding: 15px;
+  border-radius: 8px;
+}
+
 </style> <!-- NÃO APAGUE ESSE </style>! -->
 
   </style>
