--- a/index.html
+++ b/index.html
@@ -644,11 +644,11 @@
             <h3>📌 Benefícios da Instalação</h3>
             <ul>
               <li><strong>Instalação profissional</strong> no conforto da sua casa ou trabalho</li>
-              <li><strong>Localização em tempo real</strong> com atualizações a cada 10 segundos</li>
+              <li><strong>Localização em tempo real</strong> com atualizações a cada 30 segundos</li>
               <li><strong>Histórico completo de rotas</strong> com até 90 dias de armazenamento</li>
               <li><strong>Compartilhamento fácil</strong> - baixe o app em até 4 dispositivos</li>
-              <li><strong>Notificações instantâneas</strong> de ignição, velocidade e muito mais</li>
-              <li><strong>Suporte 24h</strong> por WhatsApp para qualquer dúvida ou emergência</li>
+              <li><strong>Notificações </strong> de ignição, velocidade e muito mais</li>
+              <li><strong>Suporte 24h</strong> por WhatsApp para emergência</li>
             </ul>
           `;
           
